Name:                ExitStrategy
Version:             0.0.4
Stability:	     experimental
Synopsis:	     Turn based strategy game using SDL
Description:         Turn based strategy game using SDL
License:             GPL-3
License-file:        LICENSE
Author:              Timothy Bogdala
Maintainer:          tdb@animal-machine.com
Build-Type:          Simple
Cabal-Version:       >=1.6
Category:	     Game
Homepage:	     http://www.animal-machine.com/blog/exit-strategy

Data-Files:          art/64x74/*.png, art/32x37/*.png, art/128x148/*.png, 
		     art/fonts/VeraMono.ttf,art/fonts/VeraMono-COPYRIGHT.TXT,
		     art/svg/*.svg

Executable exitstrategy
  Main-is:           Game.lhs
  Other-modules:     Utils, UserSettings, UserInterface, TileSet, Server, GamePacket,
                     GameMap, UITypes, UIConsole
  Build-Depends:     base >= 4, containers, random, SDL, SDL-image, SDL-ttf,
                     json, directory, filepath, transformers, network, stm


Executable exitstrategy-editor
  Main-is:           Editor.lhs
  Other-modules:     UITypes, UIConsole, TileSet, GameMap, Utils
  Build-Depends:     base >= 4, containers, random, SDL, SDL-image, SDL-ttf,
                     json, directory, filepath

