Name:                strat
Version:             0.0.3
Stability:	     experimental
Synopsis:	     Turn based strategy game using SDL
Description:         Turn based strategy game using SDL
License:             GPL-3
License-file:        LICENSE
Author:              Timothy Bogdala
Maintainer:          tdb@animal-machine.com
Build-Type:          Simple
Cabal-Version:       >=1.6
Category:	     Game
Homepage:	     http://www.animal-machine.com

Data-Files:          art/64x74/*.png, art/32x37/*.png, art/128x148/*.png, 
		     art/fonts/VeraMono.ttf,art/fonts/VeraMono-COPYRIGHT.TXT,
		     art/svg/*.svg

Executable strat
  Main-is:           Strat.lhs
  Other-modules:     UITypes, UIConsole, TileSet
  Build-Depends:     base >= 4, containers, random, SDL, SDL-image, SDL-ttf,
                     json

